# sdv-failover-orchestrator

./: README.md  k3s.yaml  watchdog_timer.py  worker_node_heartbeat.py
Dockerfile/: Dockerfile_lane  Dockerfile_pose
config/: .off-cluster.sh.swp  delete-all-pods.sh  instrument_cluster.yaml  lane_detection.yaml  off-cluster.sh  off-lane.sh  off-pose.sh  pose_estimation.yaml  standby_lane_detection.yaml  standby_pose_estimation.yaml
instrument_cluster/src/: CMakeLists.txt  cluster.py  package.xml
lane_detection/src/: CMakeLists.txt  lane_detection.cpp  lane_detection_launch.py  package.xml
pose_estimation/launch/: pose_estimation_launch.py
pose_estimation/src/: CMakeLists.txt  package.xml  pose_estimation.py
