<?xml version="1.0"?>
<package format="3">
  <name>mediapipe_pose</name>
  <version>0.0.1</version>
  <description>ROS 2 package for Mediapipe Pose estimation node</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>launch</depend>

  <exec_depend>mediapipe</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
